--- a/Q3PRACTICE1.html
+++ b/Q3PRACTICE1.html
@@ -66,5 +66,6 @@
 
 	document.getElementById('quote1').innerHTML = quote1 + "<br>";
 	document.getElementById('owner').innerHTML = name;
+</script>
 </body>
 </html>
